# trade-analyze

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py
api/routers/: market.py  picks.py  quotes.py  validation.py
api/schemas/: responses.py
common/: config.py  db.py  init_db.py  logging_conf.py  models.py  params.py  upsert.py
engine/datasource/: akshare_source.py  baostock_source.py  base.py  classify.py  pipeline.py  tushare_source.py
engine/factors/: chip.py  hard_filter.py  market.py  soft_score.py
engine/jobs/: backtest.py  bt_analyze.py  bt_rank.py  bt_stats.py  daily_pipeline.py  daily_pipeline.sh  fetch_basic.py  fetch_daily.py  fetch_industry.py  recall_analyze.py  run_selection.py  run_validation.py  weekly_report.py
engine/selection/: selector.py
engine/validation/: report.py  validator.py
sql/: init_database.sql  schema.sql
tests/: conftest.py  test_api.py  test_hard_filter.py  test_market.py  test_selector.py  test_soft_score.py  test_upsert.py  test_validation.py
