[project]
name = "trade-analyze"
version = "0.1.0"
description = "A股自动选股分析系统 - 候选池生成与验证闭环"
requires-python = ">=3.9"
dependencies = [
    # 数据采集
    "akshare>=1.16.0",
    # 计算
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    # 数据库
    "SQLAlchemy>=2.0.30",
    "PyMySQL>=1.1.0",
    "cryptography>=42.0.0",        # PyMySQL caching_sha2_password 需要
    # 配置
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Python 3.9 下让 pydantic 正确求值 `X | None` 注解（3.10+ 可省略，装着无害）
    "eval-type-backport>=0.2.0; python_version < '3.10'",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # 工具
    "python-dateutil>=2.9.0",
    "tenacity>=8.4.0",             # 数据采集重试
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",              # FastAPI TestClient
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["common*", "engine*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
